--- a/static/style.css
+++ b/static/style.css
@@ -11,7 +11,7 @@ body {
 
 /* Header */
 header {
-    background-color: #4a90e2;
+    background-color: #b0b591;
     color: white;
     padding: 1rem;
     text-align: center;
