--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,56 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Message Board{% endblock %}
 
 {% block content %}
-<h2>Messages</h2>
+  <section class="container">
+    <div class="card">
+      <h2>Messages</h2>
+      <p><a class="add-link" href="{% url 'add_message' %}">Add a new message</a></p>
 
-  <a href="{% url 'add_message' %}">➕ Add a new message</a>
+      {% for message in messages_list %}
+        <div class="message-item">
+          <p class="meta">
+            <strong>{{ message.author }}</strong> -
+            <span class="time">{{ message.created_at|date:"M d, Y H:i" }}</span>
+          </p>
+          <p class="text">{{ message.text }}</p>
 
-{% for message in messages %}
-  <div class="message">
-    <p><strong>{{ message.author }}</strong> - {{ message.created_at|date:"M d, Y H:i" }}</p>
-    <p>{{ message.text }}</p>
-    Likes: {{ message.total_likes }}
-    {% if user.is_authenticated %}
-      <a href="{% url 'like_message' message.pk %}">
-        {% if user in message.likes.all %}💔 Unlike{% else %}❤️ Like{% endif %}
-      </a>
-    {% endif %}
-    {% if user.is_authenticated and user.username == message.author %}
-      <p>
-        <a href="{% url 'edit_message' message.pk %}">✏️ Edit</a> |
-        <a href="{% url 'delete_message' message.pk %}">🗑️ Delete</a>
-      </p>
-    {% endif %}
-  </div>
-  <hr>
-{% empty %}
-  <p>No messages yet.</p>
-{% endfor %}
+          <p class="controls">
+            <span>Likes: {{ message.total_likes }}</span>
+            {% if user.is_authenticated %}
+              <a href="{% url 'like_message' message.pk %}">
+                {% if user in message.likes.all %}Unlike{% else %}Like{% endif %}
+              </a>
+            {% endif %}
 
+            {% if user.is_authenticated and user.username == message.author %}
+              &nbsp;|&nbsp;
+              <a href="{% url 'edit_message' message.pk %}">Edit</a>
+              &nbsp;|&nbsp;
+              <a href="{% url 'delete_message' message.pk %}">Delete</a>
+            {% endif %}
+          </p>
+        </div>
+
+        <hr>
+      {% empty %}
+        <p>No messages yet. Be the first!</p>
+      {% endfor %}
+
+      {# Pagination controls (only if paginate_by used) #}
+      {% if is_paginated %}
+        <div class="pagination">
+          {% if page_obj.has_previous %}
+            <a href="?page={{ page_obj.previous_page_number }}">Previous</a>
+          {% endif %}
+          <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
+          {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">Next</a>
+          {% endif %}
+        </div>
+      {% endif %}
+    </div>
+  </section>
 {% endblock %}
