--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,13 @@
   <section class="container">
     <div class="card">
       <h2>Messages</h2>
-      <p><a class="add-link" href="{% url 'add_message' %}">Add a new message</a></p>
+      <p><a class="add-link" href="{% url 'add_message' %}">📜CREATE POST</a></p>
 
       {% for message in messages_list %}
         <div class="message-item">
           <p class="meta">
             <strong>{{ message.author }}</strong> -
-            <span class="time">{{ message.created_at|date:"M d, Y H:i" }}</span>
+            <span class="time">🕒{{ message.created_at|date:"M d, Y H:i" }}</span>
           </p>
           <p class="text">{{ message.text }}</p>
 
@@ -21,15 +21,15 @@
             <span>Likes: {{ message.total_likes }}</span>
             {% if user.is_authenticated %}
               <a href="{% url 'like_message' message.pk %}">
-                {% if user in message.likes.all %}Unlike{% else %}Like{% endif %}
+                {% if user in message.likes.all %}💔Unlike{% else %}❤️Like{% endif %}
               </a>
             {% endif %}
 
             {% if user.is_authenticated and user.username == message.author %}
               &nbsp;|&nbsp;
-              <a href="{% url 'edit_message' message.pk %}">Edit</a>
+              <a href="{% url 'edit_message' message.pk %}">✏️Edit</a>
               &nbsp;|&nbsp;
-              <a href="{% url 'delete_message' message.pk %}">Delete</a>
+              <a href="{% url 'delete_message' message.pk %}">🗑️Delete</a>
             {% endif %}
           </p>
         </div>
